Fix speaker section height/overlapping

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2264,7 +2264,6 @@ footer {
   .speakers .avitars .person-container {
     width: 100%;
     margin: 20px 0;
-    height: 275px;
     float: left;
     text-align: center; }
     @media (min-width: 480px) {
